challenge: qr code component

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
   <h1>Frontend mentor challenges</h1>
   <article class="card">
     <h2>All challenges</h2>
-    <p>Completing my first challenge 💪</p>
+    <ul>
+      <li><a href="./qr-code-component/">QR code component</a></li>
+    </ul>
   </article>
   <footer>
     Created by Barish Barla <a href="https://github.com/Valac01" target="_blank" rel="noopener noreferrer"><img src="./static/img/GitHub-Mark-64px.png" alt="github-logo"></a>
