--- a/qr-code-component/index.html
+++ b/qr-code-component/index.html
@@ -12,18 +12,18 @@
 
 </head>
 <body>
-  <div class="card">
-    <img src="./images/image-qr-code.png" class="card__image" alt="qr code">
+  <main class="card">
+    <img src="./images/image-qr-code.png" class="card__image" alt="qr code for the website frontend mentor">
     <h1 class="card__title">
       Improve your front-end skills by building projects
     </h1>
     <p class="card__content">
       Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
     </p>
-  </div>
-  <div class="attribution">
+  </main>
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" rel="noopener noreferrer">Frontend Mentor</a>. 
     Coded by <a href="https://www.frontendmentor.io/profile/Valac01" target="_blank" rel="noopener noreferrer">Barish Barla</a>.
-  </div>
+  </footer>
 </body>
 </html>
