challenge: interactive rating component

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <h2>All challenges</h2>
     <ul>
       <li><a href="./qr-code-component/">QR code component</a></li>
+      <li><a href="./interactive-rating-component/">Interactive rating component</a></li>
     </ul>
   </article>
   <footer>
